; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_write_sltg.c_add_block_index.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_write_sltg.c_add_block_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sltg_typelib = type { i32, %struct.sltg_block* }
%struct.sltg_block = type { i32, i32, %struct.sltg_block*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sltg_typelib*, i8*, i32, i32)* @add_block_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_block_index(%struct.sltg_typelib* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.sltg_typelib*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.sltg_block*, align 8
  %10 = alloca %struct.sltg_block*, align 8
  store %struct.sltg_typelib* %0, %struct.sltg_typelib** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = call %struct.sltg_block* @xmalloc(i32 24)
  store %struct.sltg_block* %11, %struct.sltg_block** %9, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.sltg_block*, %struct.sltg_block** %9, align 8
  %14 = getelementptr inbounds %struct.sltg_block, %struct.sltg_block* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load %struct.sltg_block*, %struct.sltg_block** %9, align 8
  %17 = getelementptr inbounds %struct.sltg_block, %struct.sltg_block* %16, i32 0, i32 3
  store i8* %15, i8** %17, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load %struct.sltg_block*, %struct.sltg_block** %9, align 8
  %20 = getelementptr inbounds %struct.sltg_block, %struct.sltg_block* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load %struct.sltg_block*, %struct.sltg_block** %9, align 8
  %22 = getelementptr inbounds %struct.sltg_block, %struct.sltg_block* %21, i32 0, i32 2
  store %struct.sltg_block* null, %struct.sltg_block** %22, align 8
  %23 = load %struct.sltg_typelib*, %struct.sltg_typelib** %5, align 8
  %24 = getelementptr inbounds %struct.sltg_typelib, %struct.sltg_typelib* %23, i32 0, i32 1
  %25 = load %struct.sltg_block*, %struct.sltg_block** %24, align 8
  %26 = icmp ne %struct.sltg_block* %25, null
  br i1 %26, label %27, label %44

27:                                               ; preds = %4
  %28 = load %struct.sltg_typelib*, %struct.sltg_typelib** %5, align 8
  %29 = getelementptr inbounds %struct.sltg_typelib, %struct.sltg_typelib* %28, i32 0, i32 1
  %30 = load %struct.sltg_block*, %struct.sltg_block** %29, align 8
  store %struct.sltg_block* %30, %struct.sltg_block** %10, align 8
  br label %31

31:                                               ; preds = %36, %27
  %32 = load %struct.sltg_block*, %struct.sltg_block** %10, align 8
  %33 = getelementptr inbounds %struct.sltg_block, %struct.sltg_block* %32, i32 0, i32 2
  %34 = load %struct.sltg_block*, %struct.sltg_block** %33, align 8
  %35 = icmp ne %struct.sltg_block* %34, null
  br i1 %35, label %36, label %40

36:                                               ; preds = %31
  %37 = load %struct.sltg_block*, %struct.sltg_block** %10, align 8
  %38 = getelementptr inbounds %struct.sltg_block, %struct.sltg_block* %37, i32 0, i32 2
  %39 = load %struct.sltg_block*, %struct.sltg_block** %38, align 8
  store %struct.sltg_block* %39, %struct.sltg_block** %10, align 8
  br label %31

40:                                               ; preds = %31
  %41 = load %struct.sltg_block*, %struct.sltg_block** %9, align 8
  %42 = load %struct.sltg_block*, %struct.sltg_block** %10, align 8
  %43 = getelementptr inbounds %struct.sltg_block, %struct.sltg_block* %42, i32 0, i32 2
  store %struct.sltg_block* %41, %struct.sltg_block** %43, align 8
  br label %48

44:                                               ; preds = %4
  %45 = load %struct.sltg_block*, %struct.sltg_block** %9, align 8
  %46 = load %struct.sltg_typelib*, %struct.sltg_typelib** %5, align 8
  %47 = getelementptr inbounds %struct.sltg_typelib, %struct.sltg_typelib* %46, i32 0, i32 1
  store %struct.sltg_block* %45, %struct.sltg_block** %47, align 8
  br label %48

48:                                               ; preds = %44, %40
  %49 = load %struct.sltg_typelib*, %struct.sltg_typelib** %5, align 8
  %50 = getelementptr inbounds %struct.sltg_typelib, %struct.sltg_typelib* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %50, align 8
  ret void
}

declare dso_local %struct.sltg_block* @xmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
